modules/gdscript/tests/scripts/analyzer/errors/constant_array_index_assign.gd
const array: Array = [0]

func test():
	var key: int = 0
	array[key] = 0
